mengubah isi  card body menjadi lebih alay

--- a/crud-native/index.html
+++ b/crud-native/index.html
@@ -91,16 +91,16 @@
             <div class="col-md-4">
                 <div class="card mb-4">
                     <div class="card-body">
-                        <h5 class="card-title">Manajemen Dokter</h5>
-                        <p class="card-text">informasi dokter.</p>
-                        <a href="./dokter.php" class="btn btn-primary">Kelola Dokter</a>
+                        <h5 class="card-title">Manajemen Dokter jaya jaya belanda penjajahh</h5>
+                        <p class="card-text">informasi dokter untuk mengobati luka yang dalam.</p>
+                        <a href="./dokter.php" class="btn btn-primary">Kelola Dokter untuk orang gamon</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
                     <div class="card-body">
-                        <h5 class="card-title">Manajemen Pasien</h5>
+                        <h5 class="card-title">Manajemen Pasien jaya jaya</h5>
                         <p class="card-text">informasi pasien.</p>
                         <a href="./pasien.php" class="btn btn-primary">Kelola Pasien</a>
                     </div>
@@ -109,7 +109,7 @@
             <div class="col-md-4">
                 <div class="card mb-4">
                     <div class="card-body">
-                        <h5 class="card-title">Manajemen Kunjungan</h5>
+                        <h5 class="card-title">Manajemen Kunjungan jaya jaya</h5>
                         <p class="card-text">informasi kunjungan.</p>
                         <a href="./kunjungan.php" class="btn btn-primary">Kelola Kunjungan</a>
                     </div>
